--- a/gulp-basic/src/scss/partials/_variables.scss
+++ b/gulp-basic/src/scss/partials/_variables.scss
@@ -1,9 +1,24 @@
 /*		  Global Variables Set: variables.scss		*/
 /*      ========================================   */
-@import "compass";
-@import "compass/typography";
 
+// Color Palette
+$brand-primary: 	#681400;
 
+// CSS Variables
+:root {
+	--primary-clr: #{$brand-primary};
+}
+
+// $link-color:		#50708a;
+// $link-color:		darken($brand-blue, 35);
+// $link-color-hover:	darken($link-color, 15);
+
+// Navbar links
+// $navbar-default-link-color:                $brand-brown;
+// $navbar-default-link-hover-color:          darken($navbar-default-link-color, 2.5);
+// $navbar-default-link-hover-bg:             lighten($brand-blue, 7);
+// $navbar-default-link-active-color:         #555;
+// $navbar-default-link-active-bg:            rgba(255, 255, 255, 0.35);
 
 //## Grayscale from Bootstrap.
 $gray-base: 		#000;
@@ -13,31 +28,9 @@ $gray: 				lighten($gray-base, 33.5%); // #555
 $gray-light: 		lighten($gray-base, 46.7%); // #777
 $gray-lighter: 		lighten($gray-base, 93.5%); // #eee
 
-
-// Color Palette
-$brand-blue:		#aec2d7;
-$brand-orange:		#dc8d1e;
-$brand-beige:		#e9e2cf;
-
-$brand-gray-light:		#e3e3e3;
-$brand-gray-lighter:	#f9f9f9;
-
+// Lightest gray text-color on full white BG
+// For accessibility audit
 $gray-safe:			#767676;
-
-$inverse-color: 	#acacac;
-$inverse-bg:	 	$gray-darker;
-
-// $link-color:		#50708a;
-$link-color:		darken($brand-blue, 35);
-$link-color-hover:	darken($link-color, 15);
-
-
-//   Components that rely on type
-$comp-border: #ddd;
-$comp-bg: #f5f5f5;
-$comp-bg-shade: lighten($gray-light, 30);
-$comp-border-shade: darken($comp-bg-shade, 5);
-
 
 // Print Element Variables
 $print-base-light: 	#eee;
@@ -53,34 +46,38 @@ $print-brd-med: 	darken($print-base-med, 10) !important;
 $print-brd-dark: 	darken($print-base-dark, 10) !important;
 
 
+//   Components
+$comp-border: #ddd;
+$comp-bg: #f5f5f5;
+$comp-bg-shade: lighten($gray-light, 30);
+$comp-border-shade: darken($comp-bg-shade, 5);
+
+// Border Radii
+$border-radius-base:        4px;
+$border-radius-large:       6px;
+$border-radius-small:       3px;
+
+
+
 // Typography variables
-$base-font-size: 20px;
-$line-height: 1.65;
-// The $base-line-height is set to 1/4 of the final line-height
-// to provide flexibility in compass/typography
-// $base-line-height: $base-font-size * 1.5 / 4;
-// $base-line-height: $base-font-size * $line-height / 4;
-// @include establish-baseline;
+$line-height: 1.5;
 
-
+$base-font-size: 16rem;
+$base-line-height: $line-height;
 // Minor Third Scale: 1.2
 $type-scale: 1.2;
 
 
 $nrw-font-size: 16px;
-$nrw-line-height: 1.5;
-
+$nrw-line-height: $line-height;
 // Major Second Scale: 1.125
 $nrw-type-scale: 1.125;
 
 
 $print-font-size: 12px;
 $print-line-height: $line-height;
-
 // Major Second Scale: 1.125
 $print-type-scale: 1.125;
-
-
 
 
 // Layout Grid Sizes
@@ -98,5 +95,3 @@ $screen-xxs-max:	$screen-xs - 1;
 $grid-gutter-width: 30px;
 $el-pad: $grid-gutter-width / 2;
 $table-sides: 8px;
-
-$border-radius: 4px;
