--- a/gulp-basic/src/scss/partials/_layout.scss
+++ b/gulp-basic/src/scss/partials/_layout.scss
@@ -1,35 +1,33 @@
-
 body {
-	display: grid;
-	grid-template-columns: minmax(290px, $screen-lg);
-	grid-template-rows: auto auto auto;
-	justify-content: center;
+  display: grid;
+  grid-template-columns: minmax(290px, $screen-lg);
+  grid-template-rows: auto auto auto;
+  justify-content: center;
+  padding: 60rem 0;
 
-	padding: 60rem 0;
-
-	& > * {
-		padding-left: $el-pad;
-		padding-right: $el-pad;
-	}
+  & > * {
+    padding-left: $el-pad;
+    padding-right: $el-pad;
+  }
 }
-
 
 // Dev Properties
 .grid-underlay {
-    background: #999 url(../img/devbg_12c_full.png) center 0px repeat-y;
+  background: url('../img/devbg_12c_full.png') center 0 repeat-y;
+  background-size: 100% ($type-rhythm-px * 1px);
+
+  @include responsive(xxs) {
+    background: url('../img/devbg_type_white.png') center 0 repeat-y;
     background-size: 100% ($type-rhythm-px * 1px);
+  }
 
-	@include responsive(xxs){
-	    background: #999 url(../img/devbg_type_white.png) center 0px repeat-y;
-	    background-size: 100% ($type-rhythm-px * 1px);
-	};
 
-	@include responsive(lg){
-	    background-size: 1200px ($type-rhythm-px * 1px);
-	};
-
+  @include responsive(lg) {
+    background-color: $gray-light;
+    background-size: 1200px ($type-rhythm-px * 1px);
+  }
 }
 
 .main-content {
-	padding-top: beat(2);
+  padding-top: beat(2);
 }
