--- a/gulp-basic/src/scss/partials/_class-lib.scss
+++ b/gulp-basic/src/scss/partials/_class-lib.scss
@@ -1,77 +1,90 @@
-@import "mixins";
+@import 'mixins';
 
 %x-small-type {
-    @include typesetter(x-small-type);
+  @include typesetter(x-small-type);
 }
 
 %small-type {
-    @include typesetter(small-type);
+  @include typesetter(small-type);
 }
 
-%base {}
+%base {
+  font-weight: normal;
+}
 
 %large-type {
-    @include typesetter(large-type);
+  @include typesetter(large-type);
 }
 
 %x-large-type {
-    @include typesetter(x-large-type);
+  @include typesetter(x-large-type);
 }
 
 %xx-large-type {
-    @include typesetter(xx-large-type);
+  @include typesetter(xx-large-type);
 }
 
 %primary-head {
-    @include typesetter(primary-head);
+  @include typesetter(primary-head);
 }
 
 %component {
-    padding: calc(#{beat(2)} - 1px) $el-pad;
-    margin: beat(2) 0;
-    border: 1px solid #000;
-    border-radius: $border-radius-base;
+  border: 1px solid $comp-border;
+  border-radius: $border-radius-base;
+  margin: beat(2) 0;
+  padding: calc(#{beat(2)} - 1px) $el-pad;
 }
 
 %component-compact {
-    @extend %component;
+  @extend %component;
 
-    padding: calc(#{beat(1)} - 1px) $el-pad;
+  padding: calc(#{beat(1)} - 1px) $el-pad;
 }
 
 %primary-solid {
-	@include comp-colors-solid(map-get($brand, 'primary'));
+  @include comp-colors-solid(map-get($brand, 'primary'));
 }
+
 %primary-outline {
-	@include comp-colors-outline(map-get($brand, 'primary'));	
+  @include comp-colors-outline(map-get($brand, 'primary'));
 }
+
 %prime-dark-solid {
-	@include comp-colors-solid(map-get($brand, 'prime-dark'));
+  @include comp-colors-solid(map-get($brand, 'prime-dark'));
 }
+
 %prime-dark-outline {
-	@include comp-colors-outline(map-get($brand, 'prime-dark'));	
+  @include comp-colors-outline(map-get($brand, 'prime-dark'));
 }
+
 %prime-light-solid {
-	@include comp-colors-solid(map-get($brand, 'prime-light'));
+  @include comp-colors-solid(map-get($brand, 'prime-light'));
 }
+
 %prime-light-outline {
-	@include comp-colors-outline(map-get($brand, 'prime-light'));	
+  @include comp-colors-outline(map-get($brand, 'prime-light'));
 }
+
 %secondary-solid {
-	@include comp-colors-solid(map-get($brand, 'secondary'));
+  @include comp-colors-solid(map-get($brand, 'secondary'));
 }
+
 %secondary-outline {
-	@include comp-colors-outline(map-get($brand, 'secondary'));	
+  @include comp-colors-outline(map-get($brand, 'secondary'));
 }
+
 %terciary-solid {
-	@include comp-colors-solid(map-get($brand, 'terciary'));
+  @include comp-colors-solid(map-get($brand, 'terciary'));
 }
+
 %terciary-outline {
-	@include comp-colors-outline(map-get($brand, 'terciary'));	
+  @include comp-colors-outline(map-get($brand, 'terciary'));
 }
+
 %accent-solid {
-	@include comp-colors-solid(map-get($brand, 'accent'));
+  @include comp-colors-solid(map-get($brand, 'accent'));
 }
+
 %accent-outline {
-	@include comp-colors-outline(map-get($brand, 'accent'));	
+  @include comp-colors-outline(map-get($brand, 'accent'));
 }
