--- a/gulp-basic/src/scss/partials/_base.scss
+++ b/gulp-basic/src/scss/partials/_base.scss
@@ -1,14 +1,20 @@
 @import 'class-lib';
 
 html {
-  font-size: 1px;
+  font-size: $base-font-size;
 }
 
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: $base-font-size;
+  font-size: 1rem;
   line-height: $line-height;
 }
+
+@include responsive(xs){
+  html {
+    font-size: $nrw-font-size;
+  }
+};
 
 h1 {
   @extend %primary-head;
@@ -62,5 +68,27 @@ p {
 
   &.smallest {
     @extend %x-small-type;
+  }
+}
+
+// Utility Classes
+.sr-only {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+
+  &:active,
+  &:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
   }
 }
