Iconography: imported FA libraries

--- a/gulp-basic/src/scss/partials/_base.scss
+++ b/gulp-basic/src/scss/partials/_base.scss
@@ -1,5 +1,13 @@
 @import 'class-lib';
 
+// Font Awesome-ness
+@import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+/*  Removed Brands  */ 
+// @import "../../../node_modules/@fortawesome/fontawesome-free/scss/brands";
+@import "../../../node_modules/@fortawesome/fontawesome-free/scss/regular";
+@import "../../../node_modules/@fortawesome/fontawesome-free/scss/solid";
+@import "../../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims";
+
 html {
   font-size: $base-font-size;
 }
