Tint/Shade variables; Box Shadow (base); fixed  var

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -5,7 +5,7 @@
 $brand-primary: 	#681400;
 
 $white: #fff;
-$black: 000;
+$black: #000;
 
 // CSS Variables
 :root {
@@ -23,6 +23,19 @@ $gray-lighter: 		lighten($gray-base, 93.5%); // #eee
 // Lightest gray text-color on full white BG
 // For accessibility audit
 $gray-safe:			#767676;
+
+// Transparency Tints & Shadings
+$tint10: rgba(255,255,255, 0.1);
+$tint17: rgba(255,255,255, 0.175);
+$tint25: rgba(255,255,255, 0.25);
+$tint50: rgba(255,255,255, 0.5);
+$tint87: rgba(255,255,255, 0.875);
+$shade10: rgba(0,0,0, 0.1);
+$shade17: rgba(0,0,0, 0.175);
+$shade25: rgba(0,0,0, 0.25);
+$shade50: rgba(0,0,0, 0.5);
+$shade87: rgba(0,0,0, 0.875);
+
 
 // $link-color:		#50708a;
 // $link-color:		darken($brand-blue, 35);
@@ -60,7 +73,8 @@ $border-radius-base:        4px;
 $border-radius-large:       6px;
 $border-radius-small:       3px;
 
-
+// Box Shadow effect
+$shadow-base: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 
 // Typography variables
 $line-height: 1.5;
