--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,102 +1,122 @@
-@import 'class-lib';
+@import "class-lib";
 
 // Font Awesome-ness
 @import "../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
-/*  Removed Brands  */ 
+
+/*  Removed Brands  */
 // @import "../../../node_modules/@fortawesome/fontawesome-free/scss/brands";
 @import "../../../node_modules/@fortawesome/fontawesome-free/scss/regular";
 @import "../../../node_modules/@fortawesome/fontawesome-free/scss/solid";
 @import "../../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims";
 
 html {
-  font-size: $base-font-size;
+    font-size: $base-font-size;
+    height: 100%;
 }
+
+@include responsive(xs) {
+    html {
+        font-size: $nrw-font-size;
+    }
+}
+
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 1rem;
-  line-height: $line-height;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 1rem;
+    line-height: $line-height;
+    min-height: 100%;
 }
 
-@include responsive(xs){
-  html {
-    font-size: $nrw-font-size;
-  }
-};
-
 h1 {
-  @extend %primary-head;
+    @extend %primary-head;
 
-  color: var(--primary-clr, $brand-primary);
-  margin-bottom: 1px;
-  padding-bottom: beat(2);
+    color: var(--primary-clr, $brand-primary);
+    margin-bottom: 1px;
+    padding-bottom: beat(2);
 }
 
 h2 {
-  @extend %xx-large-type;
+    @extend %xx-large-type;
 
-  padding-bottom: beat(2);
+    padding-bottom: beat(2);
 }
 
 h3 {
-  @extend %x-large-type;
+    @extend %x-large-type;
 
-  padding-top: beat(2);
+    padding-top: beat(2);
 }
 
 h4 {
-  @extend %large-type;
+    @extend %large-type;
 }
 
-// h5 {
-
-// }
+h5 {
+    font-weight: bolder;
+}
 
 h6 {
-  @extend %small-type;
+    @extend %small-type;
+
+    font-weight: bolder;
 }
 
 .footnote > * {
-  @extend %x-small-type;
+    @extend %x-small-type;
 }
 
-p, ul, ol, dl, address {
-  // margin: 0 0 15rem;
-  margin-bottom: beat();
+p,
+ul,
+ol,
+dl,
+address {
+    margin-bottom: beat();
 }
 
 p {
-  &.lead {
-    @extend %large-type;
-  }
+    &.lead {
+        @extend %large-type;
+    }
 
-  &.small {
-    @extend %small-type;
-  }
+    &.small {
+        @extend %small-type;
+    }
 
-  &.smallest {
-    @extend %x-small-type;
-  }
+    &.smallest {
+        @extend %x-small-type;
+    }
+}
+
+.main-content {
+    p,
+    ul,
+    ol,
+    dl,
+    address {
+        margin-bottom: beat();
+        max-width: 54.25rem;
+    }
 }
 
 // Utility Classes
 .sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 
-  &:active,
-  &:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-  }
+    &.sr-only-focusable:active:active,
+    &.sr-only-focusable:active:focus {
+        clip: auto;
+        height: auto;
+        margin: 0;
+        overflow: visible;
+        position: static;
+        width: auto;
+    }
 }
